src/objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>Category_Logo__c</fullName>
        <label>Category Logo</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Category_URL_Link_2__c</fullName>
        <label>Category URL Link 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_URL_Link__c</fullName>
        <description>Text field used to hold optional url link to be displayed each category screen</description>
        <label>Category URL Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Category_Name__c</fullName>
        <formula>IF(Parent_Category__c = NULL, &apos;None&apos;, Parent_Category__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Child Categories</relationshipLabel>
        <relationshipName>Child_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Category Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Segment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Category__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>